[package]
name = "port_check"
version = "0.3.0"
authors = ["ufoscout <ufoscout@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Get a free local port or check if a port somewhere is reachable."
readme = "README.md"
homepage = "https://github.com/ufoscout/port-check-rs"
repository = "https://github.com/ufoscout/port-check-rs"

keywords = ["port", "network"]
categories = ["network-programming"]

[dev-dependencies]
serial_test = "3.0.0"